# SparselizardMagnetism

./: .gitmodules  CMakeLists.txt  README.md
gmsh_parser/: CMakeLists.txt  gmsh_parser.cpp  gmsh_parser.h  test_gmsh_reader.cpp
mesh_editor/: CMakeLists.txt
mesh_editor/include/: glwidget.h  mesh_holder.h
mesh_editor/src/: glwidget.cpp  main.cpp  mesh_holder.cpp
misc/: CMakeLists.txt
misc/include/: formatting.h  traces.h  user_time.h
misc/src/: traces.cpp
models/: inductionheating.geo  stator.geo  stator.msh
results/inductionheating/: e_harm2.pos  e_harm3.pos  j_harm2.pos  j_harm3.pos  v_harm2.pos  v_harm3.pos
results/permanent_magnet/: h.pos  magneticfieldline.pos  phi.pos
results/vector_potential/: spantree.pos
sparselizard_lib/: CMakeLists.txt
tests/: CMakeLists.txt  creator_test.cpp  inductionheating.cpp  permanent_magnet.cpp  stator.cpp  vector_potential.cpp  vector_potential_example.cpp  waveguide3D.cpp
